--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
+    "@types/nodemailer": "^6.4.10",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
@@ -32,10 +33,12 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
