--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
